--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,7 @@ jobs:
         cache: gradle
 
     - name: Grant execute permissions for gradlew
-    - run: chmod +x gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
     - name: Upload logs
