--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,7 +22,9 @@ jobs:
 
     - name: Print dir
       run: ls
+    - name: look for gradlew
+      run: find / -type f -name "gradlew"
     - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
