--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,10 +20,10 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: checkout to app
+      run: cd DataBidingApplication
     - name: Print dir
       run: ls
-    - name: look for gradlew
-      run: find / -type f -name "gradlew"
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
