--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,8 @@ jobs:
       run: cd DataBidingApplication
     - name: Print dir
       run: ls
+    - name: setup gradle
+      uses: gradle/gradle-build-action@v2
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
