--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,16 +17,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+        distribution: 'zulu'
 
-    - name: checkout to app
-      run: cd DataBidingApplication
-    - name: Print dir
-      run: ls
-    - name: setup gradle
-      uses: gradle/gradle-build-action@v2
-    - name: grant permission
-      run: git update-index --chmod=+x gradlew
     - name: Build with Gradle
       run: ./gradlew build
