--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,18 +2,21 @@ name: Android CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      main
   pull_request:
-    branches: [ "main" ]
+    branches: 
+      - '*'
 
 jobs:
-  build:
-
+  bidder_token_generation_time:
+    name: Bidder Token Generation Time
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: set up JDK 11
+      - name: Checkout the code
+        uses: actions/checkout@v3
+      - name: Set up Java
         uses: actions/setup-java@v3
         with:
           java-version: '11'
@@ -21,5 +24,6 @@ jobs:
 
       - name: Grant permssions
         run: chmod +x gradlew
+        
       - name: Build with Gradle
         run: ./gradlew build
