--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'zulu'
 
       - name: Grant permssions
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
         
       - name: Build with Gradle
         run: ./gradlew build
