--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,10 +20,18 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'zulu'
+          distribution: 'temurin'
+          cache: gradle
 
-      - name: Grant permssions
-        run: chmod +x ./gradlew
+      - name: Grant execute permssion for gradlew
+        run: chmod +x gradlew
         
       - name: Build with Gradle
         run: ./gradlew build
+
+      - name: Upload logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: Build report
+          path: app/build/reports
+        if: always()
