--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,7 @@ jobs:
           cache: gradle
 
       - name: Grant execute permssion for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
         
       - name: Build with Gradle
         run: ./gradlew build
